<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>arex-schedule-parent</artifactId>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <encoding>${project.build.sourceEncoding}</encoding>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <annotationProcessorPaths>
              <path>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
              <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>0.2.0</version>
              </dependency>
            </annotationProcessorPaths>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <configuration>
            <skipSource>${maven.source.skip}</skipSource>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
              <id>attach-sources</id>
            </execution>
          </executions>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-source-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-war-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-install-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <configuration>
            <skip>${maven.deploy.skip}</skip>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>

      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
            <id>generate-source-jar</id>
            <phase>package</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-gpg-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>sign</goal>
            </goals>
            <id>sign-artifacts</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.0.1</version>
      </plugin>
      <plugin>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <configuration>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <serverId>ossrh</serverId>
          <stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
        </configuration>
        <extensions>true</extensions>
        <groupId>org.sonatype.plugins</groupId>
        <version>1.6.13</version>
      </plugin>
      <plugin>
        <artifactId>versions-maven-plugin</artifactId>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
        <groupId>org.codehaus.mojo</groupId>
        <version>2.8.1</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.11</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <excludes>**/*.jar</excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>guava</artifactId>
        <groupId>com.google.guava</groupId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <artifactId>log4j-bom</artifactId>
        <groupId>org.apache.logging.log4j</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>2.17.2</version>
      </dependency>
      <dependency>
        <artifactId>spring-boot-dependencies</artifactId>
        <groupId>org.springframework.boot</groupId>
        <scope>import</scope>
        <type>pom</type>
        <version>${spring.boot.version}</version>
      </dependency>
      <dependency>
        <artifactId>spring-boot-starter-test</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>${spring.boot.version}</version>
      </dependency>
      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <scope>provided</scope>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <artifactId>compare-sdk</artifactId>
        <groupId>com.arextest</groupId>
        <version>${compare-sdk.version}</version>
      </dependency>
      <dependency>
        <artifactId>commons-collections4</artifactId>
        <groupId>org.apache.commons</groupId>
        <version>4.4</version>
      </dependency>
      <dependency>
        <artifactId>commons-lang3</artifactId>
        <groupId>org.apache.commons</groupId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <artifactId>arex-model</artifactId>
        <groupId>com.arextest</groupId>
        <version>${arex-storage-config.version}</version>
      </dependency>
      <dependency>
        <artifactId>arex-web-model-contract</artifactId>
        <groupId>com.arextest</groupId>
        <version>${web-contract.version}</version>
      </dependency>
      <dependency>
        <artifactId>arex-common</artifactId>
        <groupId>com.arextest</groupId>
        <version>${arex-common.version}</version>
      </dependency>
      <dependency>
        <artifactId>fastjson2</artifactId>
        <groupId>com.alibaba.fastjson2</groupId>
        <version>${fastjson2.version}</version>
      </dependency>
      <dependency>
        <groupId>org.redisson</groupId>
        <artifactId>redisson</artifactId>
        <version>${redisson.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <description>AREX schedule is used for replay.</description>
  <developers>
    <developer>
      <email>arex.test.com@gmail.com</email>
      <name>AREX</name>
      <organization>AREX group</organization>
      <organizationUrl>https://www.arextest.com</organizationUrl>
    </developer>
  </developers>
  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>


  <groupId>com.arextest</groupId>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <modelVersion>4.0.0</modelVersion>

  <modules>
    <module>arex-schedule-web-api</module>
    <module>arex-schedule-extension</module>
  </modules>

  <name>${project.groupId}:${project.artifactId}</name>

  <packaging>pom</packaging>
  <properties>
    <spring.boot.version>2.7.18</spring.boot.version>

    <commons-lang3.version>3.3.2</commons-lang3.version>
    <compare-sdk.version>0.2.12</compare-sdk.version>
    <fastjson2.version>2.0.23</fastjson2.version>
    <guava.version>29.0-jre</guava.version>
    <java.version>1.8</java.version>

    <lombok.version>1.18.30</lombok.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
    <maven-war-plugin.version>3.0.0</maven-war-plugin.version>
    <maven.deploy.skip>false</maven.deploy.skip>
    <maven.source.skip>false</maven.source.skip>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.exclusions>
      **/controller/**,
      **/model/**,
      **/mapping/**
    </sonar.exclusions>
    <arex-storage-config.version>1.1.36</arex-storage-config.version>
    <web-contract.version>0.6.4.13</web-contract.version>
    <arex-common.version>0.2.1</arex-common.version>
    <redisson.version>3.20.1</redisson.version>
  </properties>

  <scm>
    <connection>scm:git:git://github.com/arextest/arex-replay-schedule.git</connection>
    <developerConnection>scm:git:ssh://github.com:arextest/arex-replay-schedule.git
    </developerConnection>
    <url>https://github.com/arextest/arex-replay-schedule</url>
  </scm>
  <url>https://github.com/arextest/arex-replay-schedule</url>
  <version>1.2.8</version>
</project>